--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.HpWens:MeiWidgetView:v0.1.6'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 
 }
